--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -1,6 +1,8 @@
 .search{
     .input{
+        border-radius: 10px;
         width: 700px;
         padding: 20px;
+        border: 1px solid gainsboro;
     }
 }
