--- a/src/components/cartItem/cartItem.scss
+++ b/src/components/cartItem/cartItem.scss
@@ -1,9 +1,41 @@
 .cart-container {
   display: flex;
+  justify-items: center;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 10px;
 
   &__img {
-    width: 100px;
-    height: 90px;
+    width: 90px;
+    height: 80px;
     border-radius: 100%;
+  }
+
+  &__details {
+    display: flex;
+    margin: 0 30px;
+    min-width: 300px;
+    justify-content: space-between;
+    align-items: center;
+
+  }
+}
+
+@media (max-width: 600px) {
+  .cart-container {
+    margin-bottom: 30px;
+
+    &__img {
+      width: 80px;
+      height: 80px;
+      object-fit: cover;
+    }
+
+    &__details {
+      flex-direction: column;
+      min-width: 0;
+      justify-content: space-between;
+      gap: 10px;
+    }
   }
 }
