--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -27,14 +27,36 @@
     }
 
     .forms-inputs {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
 
+      &__input {
+        height: 38px;
+      }
     }
 
     .links {
+      margin: 24px 0;
       display: flex;
       flex-direction: column;
+      gap: 24px;
+
+      &__link-primary {
+        color: black;
+        text-decoration: none;
+      }
+
+      &__button {
+        background-color: #FF9F9F;
+        border: none;
+        height: 40px;
+        border-radius: 10px;
+        color: white;
+      }
     }
   }
+
 
   .container-links {
     width: 100%;
@@ -43,5 +65,10 @@
     border: 1px solid;
     padding: 20px 50px;
     align-self: center;
+
+    &__link-primary {
+      color: #E46868;
+      text-decoration: none;
+    }
   }
 }
