--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -57,7 +57,6 @@
     }
   }
 
-
   .container-links {
     width: 100%;
     display: flex;
@@ -69,6 +68,21 @@
     &__link-primary {
       color: #E46868;
       text-decoration: none;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .login {
+
+    .container-form {
+      border: none;
+      padding: 0;
+    }
+
+    .container-links {
+      border: none;
+      padding: 0;
     }
   }
 }
