--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bacasime+Antique&family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&display=swap');
+
 
 .login {
   display: flex;
@@ -7,8 +9,9 @@
   justify-self: center;
   align-self: center;
   gap: 20px;
-  margin: 20px 0;
+  margin: 49px 0;
   text-align: center;
+  
 
   .container-form {
     width: 100%;
@@ -24,12 +27,28 @@
       font-weight: 400;
       font-style: normal;
       padding: 50px 0;
+      color: #FF3C3C;
     }
 
     .forms-inputs {
       display: flex;
       flex-direction: column;
       gap: 10px;
+      align-items: center;
+
+      &__data{
+        max-width: 300px;
+        input{
+          padding: 10px;
+          width: 276px;
+          &::placeholder{
+            font-family: "Baskervville", serif;
+            font-weight: 400;
+            font-style: normal;
+            font-size: 16px;
+          }
+        }
+      }
 
       &__input {
         height: 38px;
@@ -52,7 +71,12 @@
         border: none;
         height: 40px;
         border-radius: 10px;
+        font-size: 20px;
         color: white;
+        width: 300px;
+        font-family: "Baskervville", serif;
+        font-weight: 400;
+        font-style: normal;
       }
     }
   }
