--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bacasime+Antique&family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&display=swap');
+
 
 .register {
-  max-width: 400px;
+  max-width: 300px;
   display: flex;
   flex-direction: column;
   justify-self: center;
@@ -25,6 +27,7 @@
       font-weight: 400;
       font-style: normal;
       padding: 50px 0;
+      color: #FF3C3C;
     }
 
     .forms-inputs {
@@ -34,6 +37,14 @@
 
       &__input {
         height: 38px;
+        padding-left: 15px;
+
+        &::placeholder{
+          font-family: "Baskervville", serif;
+          font-weight: 400;
+          font-style: normal;
+          font-size: 16px;
+        }
       }
     }
 
@@ -43,8 +54,16 @@
       flex-direction: column;
       gap: 24px;
 
+      p{
+        max-width: 230px;
+        align-self: center;
+        font-family: "Baskervville", serif;
+        font-weight: 400;
+        font-style: normal;
+      }
+
       &__link-primary {
-        color: black;
+        color: #E46868;
         text-decoration: none;
       }
 
@@ -54,6 +73,10 @@
         height: 40px;
         border-radius: 10px;
         color: white;
+        font-family: "Baskervville", serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 20px;
       }
     }
   }
@@ -65,6 +88,10 @@
     border: 1px solid;
     padding: 20px 50px;
     align-self: center;
+    font-family: "Baskervville", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 16px;
 
     &__link-primary {
       color: #E46868;
