--- a/src/components/cardContent/cardContent.scss
+++ b/src/components/cardContent/cardContent.scss
@@ -8,6 +8,10 @@
     flex-flow: column nowrap;
     position: relative;
     width: 300px; 
+    
+    a{
+        text-decoration: none;
+    }
 
     &__img {
         height: 300px;
@@ -39,6 +43,7 @@
             font-size: 16px;
             width: 270px;
             text-align: center;
+            color: black;
         }
 
         &-price {
