--- a/src/components/featured-items/FeaturedContent.scss
+++ b/src/components/featured-items/FeaturedContent.scss
@@ -1,5 +1,10 @@
 .feature-item{
    max-width: 345px;
+
+   a{
+    text-decoration: none;
+    color: black;
+   }
    &__img{
     position: relative;
     &-tag{
