--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -42,7 +42,7 @@
         display: flex;
         gap: 10px;
         align-items: center;
-        
+
         &-acessibility{
             display: flex;
             gap: 8px;
@@ -52,6 +52,7 @@
                 border: 1px solid #b4b4b4;
                 align-content: center;
                 padding: 7px;
+                cursor: pointer;
             }
         }
 
