integra cadastro e login

--- a/src/components/productsection/product_section.scss
+++ b/src/components/productsection/product_section.scss
@@ -49,6 +49,7 @@
                 padding: 9px;
                 width: 275px;
                 cursor: pointer;
+                font-size: var(--base-font-size);
             }
         }
     }
