--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -76,6 +76,7 @@
         font-family: "Baskervville", serif;
         font-weight: 400;
         font-style: normal;
+        cursor: pointer;
       }
     }
   }
