--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -75,6 +75,7 @@
         font-family: "Baskervville", serif;
         font-weight: 400;
         font-style: normal;
+        cursor: pointer;
         font-size: 20px;
       }
     }
