--- a/src/components/cardContent/cardContent.scss
+++ b/src/components/cardContent/cardContent.scss
@@ -8,6 +8,7 @@
     flex-flow: column nowrap;
     position: relative;
     width: 300px; 
+    cursor: pointer;
     
     a{
         text-decoration: none;
