--- a/src/components/cartItem/cartItem.scss
+++ b/src/components/cartItem/cartItem.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
+
+
 .cart-container {
   display: flex;
   justify-items: center;
@@ -17,6 +20,9 @@
     min-width: 300px;
     justify-content: space-between;
     align-items: center;
+    font-family: "Mulish", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 
   }
 
