--- a/src/components/cartItem/cartItem.scss
+++ b/src/components/cartItem/cartItem.scss
@@ -26,6 +26,11 @@
 
   }
 
+  &__quantity{
+    width: 50px;
+    justify-items: center;
+  }
+
   &__button {
     background-color: transparent;
     border: none;
