--- a/src/pages/cart/cart.scss
+++ b/src/pages/cart/cart.scss
@@ -1,8 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
+
+
 .cart {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  margin: 20px;
+  margin: 50px 20px ;
+  font-family: "Mulish", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+
+    &__back{
+      text-decoration: none;
+      color: #FF6868;
+    }
 
   &__container {
     display: flex;
